# tree-sitter-fix

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  sample.fix  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fix.pc.in
bindings/c/tree_sitter/: tree-sitter-fix.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fix/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFixTests/: TreeSitterFixTests.swift
src/: grammar.json  node-types.json  parser.c
